# Compiler-Theory-and-Practice

./: README.md  TransTableDiagram.drawio  report.docx  ~$report.docx  ~WRL0005.tmp
Compiler Theory/: ASTNode.cpp  ASTNodes.cpp  ASTNodes.h  CAT.csv  CMakeLists.txt  CodeGeneratorVisitorNodes.cpp  HeaderFile.h  IdentifierTable.csv  Lexer.cpp  MainClass.cpp  ParseTable.csv  ParseTransTable.csv  Parser.cpp  PixArLang.txt  PixIR.txt  SemanticVisitorNodes.cpp  SymbolTable.cpp  SymbolTable.h  Token.cpp  TokenTable.csv  TransTable.csv  VisitorDesign.cpp  VisitorDesign.h  VisitorNodes.h  XMLVisitorNodes.cpp  XMLVisitorNodes.h  test.txt
Compiler Video/: Compiler Script.docx  Credits.mkv  Error1.mkv  Error2.mkv  Error3.mkv  Error4.mkv  Error5.mkv  OP1.mkv  ShowCase1.mkv  ShowCase2.mkv
Sample Programs/: SampleProgram1.txt  SampleProgram2.txt  SampleProgram3.txt  SampleProgram4.txt  SampleProgram5.txt  SampleProgram6.txt  SampleProgram7.txt
